# inspectds

./: .pre-commit-config.yaml  .prospector.yml  Makefile  README.md  conda-lock.yml  environment.yml  mypy.ini  pyproject.toml
.github/workflows/: run_tests.yml
ci/: conda-lock-Linux-64-py3.10  conda-lock-Linux-64-py3.11  conda-lock-Linux-64-py3.12  conda-lock-Linux-64-py3.13  conda-lock-Linux-64-py3.14  conda-lock-Linux-64-py3.9  conda-lock-macOS-64-py3.10  conda-lock-macOS-64-py3.11  conda-lock-macOS-64-py3.12  conda-lock-macOS-64-py3.13  conda-lock-macOS-64-py3.14  conda-lock-macOS-64-py3.9  conda-lock-py3.10.yml  conda-lock-py3.11.yml  conda-lock-py3.12.yml  conda-lock-py3.13.yml  conda-lock-py3.14.yml  conda-lock-py3.9.yml  py3.10.yml  py3.11.yml  py3.12.yml  py3.13.yml  py3.14.yml  py3.9.yml  requirements-dev.txt  requirements-grib.txt  requirements-test.txt  requirements.txt
inspectds/: __init__.py  cli.py  lazy_imports.py
requirements/: conda-lock-Linux-64  conda-lock-linux-64  conda-lock-macOS-64  conda-lock-osx-64  requirements-dev.txt  requirements-extras.txt  requirements-grib.txt  requirements.txt
tests/: cli_test.py  conftest.py
tests/data/consolidated.zarr/: .zmetadata
tests/data/consolidated.zarr/aaa/: .zarray  .zattrs
tests/data/consolidated.zarr/lat/: .zarray
tests/data/consolidated.zarr/lon/: .zattrs  0
tests/data/nested.zarr/aaa/0/0/: 0
tests/data/nested.zarr/lat/: .zarray  .zattrs  0
tests/data/nested.zarr/time/: .zarray
tests/data/nested_consolidated.zarr/: .zmetadata
tests/data/nested_consolidated.zarr/aaa/: .zarray
tests/data/nested_consolidated.zarr/lon/: .zarray
tests/data/nested_consolidated.zarr/time/: 0
tests/data/store.zarr/lon/: .zarray
tests/data/store.zarr/time/: .zattrs
