[tool.poetry]
name = "inspectds"
version = "0.1.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.scripts]
inspectds = "inspectds.cli:app"

[tool.poetry.dependencies]
python = ">=3.7; <3.11"
xarray = "^0.16"
zarr = "^2.8"
typer = "^0.3"
netCDF4 = "^1.5"
cfgrib = { version = "^0.9", optional = true }

[tool.poetry.extras]
grib = ["cfgrib"]

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0"
black = "^21.9b0"
reorder-python-imports = "^2.5"
mypy = "^0.910"
prospector = {version = "^1.5", extras = ["all"]}
pre-commit = "^2.13"
conda-lock = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 109
target-version = ['py39']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --verbose --showlocals --tb=short --cov=inspectds --cov-report term-missing"
testpaths = [
    "tests",
]
