[tool.poetry]
name = "inspectds"
version = "0.1.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.scripts]
inspectds = "inspectds.cli:app"

[tool.poetry.dependencies]
python = ">=3.9"
xarray = "*"
zarr = ">=2.8"
typer = "*"
netcdf4 = "*"
cfgrib = { version = ">=0.9", optional = true }

[tool.poetry.extras]
grib = ["cfgrib"]

[tool.poetry.group.dev.dependencies]
covdefaults = "*"
mypy = ">=1"
pytest = "*"
pytest-cov = ">=3.0"

[tool.poetry-dynamic-versioning]
enable = true
dirty = true

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning",
]
build-backend = "poetry_dynamic_versioning.backend"

[tool.conda-lock]
channels = [
    'conda-forge',
]
platforms = [
    'linux-64',
    'osx-64',
]

[tool.conda-lock.dependencies]
eccodes = "*"

[tool.black]
line-length = 108
target-version = ['py39']

[tool.pytest.ini_options]
addopts = "-ra --verbose --showlocals --tb=short"
testpaths = ["tests"]
log_cli = true
filterwarnings = [
    'ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning',
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
]

[tool.mypy]
python_version = "3.8"
plugins = [
    "numpy.typing.mypy_plugin"
]
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
strict = true
ignore_missing_imports = true

# mypy per-module options:
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = true

[tool.ruff]
target-version = "py39"
line-length = 108
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "C90",  # mccabe
]
ignore = [
    "E501", # line-too-long
]

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["inspectds"]
concurrency = [
  "multiprocessing",
  "thread",
]
parallel = true
sigterm = true

[tool.coverage.report]
fail_under = 90
