[tool.poetry]
name = "inspectds"
version = "0.3.1"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/pmav99/inspectds.git"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
inspectds = "inspectds.cli:app"

[tool.poetry.dependencies]
python = ">=3.9"
cfgrib = { version = ">=0.9", optional = true }
netcdf4 = "*"
typer = {version = ">=0.9.0", extras = ["all"]}
xarray = "*"
xarray-selafin = {version = "*", optional = true}
zarr = ">=2.8"

[tool.poetry.extras]
grib = ["cfgrib"]
selafin = ["xarray-selafin"]
all = ["cfgrib", "xarray-selafin"]

[tool.poetry.group.dev.dependencies]
covdefaults = "*"
mypy = ">=1"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.conda-lock]
channels = [
    'conda-forge',
]
platforms = [
    'linux-64',
    'osx-64',
]

[tool.conda-lock.dependencies]
eccodes = "*"

[tool.black]
line-length = 108
target-version = ['py39']

[tool.pytest.ini_options]
addopts = "-ra --verbose --showlocals --tb=short"
testpaths = ["tests"]
log_cli = true
filterwarnings = [
    'ignore:distutils Version classes are deprecated. Use packaging.version instead:DeprecationWarning',
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
]

[tool.mypy]
python_version = "3.9"
plugins = [
    "numpy.typing.mypy_plugin"
]
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
strict = true
ignore_missing_imports = true

# mypy per-module options:
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = true

[tool.ruff]
target-version = "py39"
line-length = 108
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "C90",  # mccabe
]
ignore = [
    "E501", # line-too-long
]
